--- a/src/components/LogOut/logout.css
+++ b/src/components/LogOut/logout.css
@@ -4,15 +4,37 @@
   bottom: 0;
   right: 0;
   left: 0;
-  background-color: rgb(255 255 255 / 70%);
+  background-color: var(--rosequartz-low-opacity);
   backdrop-filter: blur(0.8px);
   display: grid;
   align-items: center;
 }
 
+.links-options {
+  padding-top: 20px;
+}
+
+.links {
+  margin: 0 10px;
+  text-decoration: none;
+  color: white;
+  transition: all 0.3s ease-out;
+  border: 2px solid white;
+  border-radius: 7px;
+  padding: 7px 10px;
+}
+
+.links:hover {
+  border-color: var(--rosequartz);
+  background-color: var(--rosequartz);
+  color: var(--blueiris);
+}
+
 .option-container {
-  font-size: 1em;
-  background-color: aqua;
+  color: black;
+  font-weight: bold;
+  font-size: 0.8em;
+  background-color: rgb(0 0 0 / 40%);
   border-radius: 7px;
   width: 400px;
   height: 200px;
