--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,25 @@
+/*
+  palette url: https://www.canva.com/colors/color-palettes/february-sky/
+*/
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 body {
   height: 100vh;
   width: 100%;
   display: grid;
+}
+
+/* Variables globales */
+:root {
+  --blueiris: #5a4fcf;
+  --periwinkle: #9fa8eb;
+  --liliac: #edd1fa;
+  --rosequartz: #f6d4d2;
+  --rosequartz-low-opacity: #f6d4d25d;
 }
