--- a/src/styles/logs.styles.css
+++ b/src/styles/logs.styles.css
@@ -1,5 +1,5 @@
 .form-container {
-  background-color: #8a8adf;
+  background-color: var(--rosequartz);
   width: 100%;
   height: 100%;
   display: grid;
@@ -8,58 +8,131 @@
 }
 
 .form {
-  padding: 15px;
-  border: 1px solid black;
+  background-color: rgb(0 0 0 / 50%);
+  padding: 30px;
+  border: none;
   border-radius: 10px;
   width: 400px;
   min-height: 350px;
   text-align: center;
+  box-shadow: 1px 1px 10px 1px var(--periwinkle);
+  position: relative;
+}
+
+.form h2 {
+  font-size: 2em;
+  letter-spacing: 1.3px;
+  margin-bottom: 10px;
+  color: white;
+}
+
+.form-inputs {
+  margin-top: 40px;
 }
 
 .input-container {
   text-align: left;
-  display: block;
-  width: 85%;
+  width: 70%;
   margin: 20px auto;
   position: relative;
 }
 
+.input-container.img {
+  display: flex;
+  align-items: center;
+}
+
 .label-form {
   position: absolute;
-  z-index: 1;
-  left: 0;
-  top: 5px;
+  left: 7px;
+  top: 0;
+  bottom: 0;
   color: white;
-  transition: all 0.4s;
+  transition: all 0.3s ease-out;
   pointer-events: none;
 }
 
 .input-form:focus ~ .label-form,
-.input-form:hover ~ .label-form {
-  transform: translateY(-20px);
+.input-form:hover ~ .label-form,
+.label-form.noempty {
+  transform: translateY(-18px) translateX(0);
+  opacity: 0.6;
+  font-size: 0.75em;
 }
 
 .input-form {
   height: 25px;
   width: 100%;
   border: none;
-  font-size: 1em;
+  font-size: 0.9em;
   border-bottom: 1px solid black;
   background-color: transparent;
   outline: none;
+  color: white;
+}
+
+.preview {
+  border-radius: 50%;
+}
+
+.input-file {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  margin-left: 10px;
+  width: 150px;
+  height: 25px;
+  text-align: center;
+}
+
+.input-file-btn {
+  background-color: transparent;
+  border: 3px solid var(--periwinkle);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  cursor: pointer;
+}
+
+.input-file::before {
+  font-size: 0.8em;
+  content: ".jpg, .png, .jpeg";
+  position: absolute;
+  bottom: -15px;
+  width: 100%;
+}
+
+.input-file input[type="file"] {
+  display: none;
 }
 
 .button-form {
   height: 30px;
-  width: 50px;
-  border: none;
-  border-radius: 7px;
-  background-color: #994aff;
-  transition: all 0.4s;
+  font-size: 0.9em;
+  width: fit-content;
+  margin: 7px 10px 0;
+  padding: 0 10px;
+  color: white;
+  letter-spacing: 0.4px;
+  border-radius: 10px;
+  border: 3px solid var(--periwinkle);
+  background-color: transparent;
+  transition: all 0.3s;
+}
+
+.button-form.invert {
+  border-color: white;
 }
 
 .button-form:hover {
-  background-color: #9b34fc;
+  opacity: 0.7;
   cursor: pointer;
 }
 
@@ -68,11 +141,18 @@
   margin: 5px 0;
 }
 
-.links {
-  margin: 0 10px;
+.error {
+  font-size: 0.8em;
+  color: var(--rosequartz);
 }
 
-.error {
-  font-size: 0.85em;
-  color: red;
+.registro-link {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 20px;
+}
+
+.registro-link a {
+  text-decoration: none;
 }
