--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,8 @@
 }
 
 .app-header {
-  background-color: rgb(0 0 0 / 50%);
-  color: white;
+  background-color: rgb(65 175 167);
   width: 20%;
-  position: relative;
   display: flex;
   justify-content: flex-end;
 }
@@ -16,5 +14,28 @@
 .app-body {
   width: 80%;
   padding: 10px;
-  background-color: var(--rosequartz);
+  background-color: var(--rose);
+}
+
+.btn {
+  transition: all 0.3s;
+  letter-spacing: 1px;
+  border: none;
+  border-radius: 10px;
+  height: 30px;
+  font-size: 0.9em;
+  width: fit-content;
+  margin: 7px 10px 0;
+  padding: 0 10px;
+  cursor: pointer;
+}
+
+.btn.primary {
+  color: white;
+  background-color: var(--orange);
+}
+
+.btn.secondary {
+  color: var(--orange);
+  background-color: var(--yellow);
 }
