--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,3 +1,4 @@
+/* stylelint-disable no-descending-specificity */
 .menu {
   width: 200px;
   position: relative;
@@ -5,7 +6,8 @@
 }
 
 .logo-app {
-  height: 100px;
+  margin-top: 10px;
+  height: 90px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -16,11 +18,11 @@
 .logo-app img {
   margin: auto;
   aspect-ratio: 1/1;
-  height: 100px;
+  height: 90px;
 }
 
 .nav-bar {
-  margin-top: 20px;
+  margin-top: 30px;
   display: flex;
   flex-direction: column;
 }
@@ -36,20 +38,105 @@
   overflow: hidden;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
+  letter-spacing: 0.6px;
 }
 
 .nav-bar a:hover {
-  background-color: var(--rosequartz);
+  background-color: var(--rose);
   transform: translateX(15px);
 }
 
 .nav-bar a.active {
-  background-color: var(--rosequartz);
+  background-color: var(--rose);
   font-weight: bold;
+}
+
+.nav-bar a div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-bar button svg,
+.nav-bar a div svg {
+  margin: 0 7px;
+}
+
+.nav-bar button,
+.info-post button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px auto;
+  background-color: white;
+  color: #f04d3c;
+  font-weight: bold;
+  border: none;
+  transition: all 0.1s;
+}
+
+.nav-bar button:hover {
+  filter: saturate(2);
 }
 
 .user-info {
   position: absolute;
-  bottom: 0;
+  right: 0;
+  bottom: 15px;
+  width: 150px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+}
+
+.user-info .user-image {
+  width: 50px;
+  border-radius: 50%;
+}
+
+.user-info .user-image img {
   width: 100%;
+  height: 100%;
+}
+
+.user-info a {
+  position: absolute;
+  right: 10px;
+  text-decoration: none;
+  color: black;
+}
+
+.user-info svg {
+  width: 1.3em;
+  height: 1.3em;
+}
+
+.user-tags {
+  display: flex;
+  flex-direction: column;
+  font-size: 0.9em;
+}
+
+.tag-name,
+.tag-nick {
+  margin: 1px 0;
+}
+
+.tag-name {
+  color: black;
+}
+
+.tag-nick {
+  font-size: 0.9em;
+  color: rgb(0 0 0 / 80%);
+}
+
+.blur-back {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: var(--rose-low-opacity);
+  backdrop-filter: blur(4px);
 }
