--- a/src/styles/logs.styles.css
+++ b/src/styles/logs.styles.css
@@ -1,5 +1,5 @@
 .form-container {
-  background-color: var(--rosequartz);
+  background-color: var(--rose);
   width: 100%;
   height: 100%;
   display: grid;
@@ -8,22 +8,22 @@
 }
 
 .form {
-  background-color: rgb(0 0 0 / 50%);
+  background-color: var(--green);
   padding: 30px;
   border: none;
   border-radius: 10px;
   width: 400px;
   min-height: 350px;
   text-align: center;
-  box-shadow: 1px 1px 10px 1px var(--periwinkle);
+  box-shadow: 1px 1px 10px 1px var(--green);
   position: relative;
+  color: rgb(0 0 0 / 80%);
 }
 
 .form h2 {
   font-size: 2em;
   letter-spacing: 1.3px;
   margin-bottom: 10px;
-  color: white;
 }
 
 .form-inputs {
@@ -44,10 +44,10 @@
 
 .label-form {
   position: absolute;
+  font-size: 0.9em;
   left: 7px;
   top: 0;
   bottom: 0;
-  color: white;
   transition: all 0.3s ease-out;
   pointer-events: none;
 }
@@ -68,7 +68,6 @@
   border-bottom: 1px solid black;
   background-color: transparent;
   outline: none;
-  color: white;
 }
 
 .preview {
@@ -85,22 +84,6 @@
   text-align: center;
 }
 
-.input-file-btn {
-  background-color: transparent;
-  border: 3px solid var(--periwinkle);
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 3px;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  cursor: pointer;
-}
-
 .input-file::before {
   font-size: 0.8em;
   content: ".jpg, .png, .jpeg";
@@ -113,26 +96,19 @@
   display: none;
 }
 
-.button-form {
-  height: 30px;
-  font-size: 0.9em;
-  width: fit-content;
-  margin: 7px 10px 0;
-  padding: 0 10px;
-  color: white;
-  letter-spacing: 0.4px;
-  border-radius: 10px;
-  border: 3px solid var(--periwinkle);
-  background-color: transparent;
-  transition: all 0.3s;
-}
-
-.button-form.invert {
-  border-color: white;
-}
-
-.button-form:hover {
-  opacity: 0.7;
+.input-file-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+  position: absolute;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
   cursor: pointer;
 }
 
@@ -143,7 +119,7 @@
 
 .error {
   font-size: 0.8em;
-  color: var(--rosequartz);
+  color: #742020;
 }
 
 .registro-link {
@@ -155,4 +131,5 @@
 
 .registro-link a {
   text-decoration: none;
+  color: #742020;
 }
