--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -83,20 +83,21 @@
   position: absolute;
   right: 0;
   bottom: 15px;
-  width: 150px;
+  width: 170px;
   height: 60px;
   display: flex;
   align-items: center;
 }
 
 .user-info .user-image {
-  width: 50px;
-  border-radius: 50%;
+  width: 70px;
+  margin-right: 7px;
 }
 
 .user-info .user-image img {
   width: 100%;
   height: 100%;
+  border-radius: 50%;
 }
 
 .user-info a {
@@ -129,14 +130,4 @@
 .tag-nick {
   font-size: 0.9em;
   color: rgb(0 0 0 / 80%);
-}
-
-.blur-back {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  background-color: var(--rose-low-opacity);
-  backdrop-filter: blur(4px);
 }
