--- a/src/styles/logs.styles.css
+++ b/src/styles/logs.styles.css
@@ -1,7 +1,7 @@
 .form-container {
   background-color: var(--rose);
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: grid;
   align-items: center;
   justify-content: center;
