--- a/src/components/Search/search.css
+++ b/src/components/Search/search.css
@@ -10,7 +10,7 @@
   left: 0;
   right: 0;
   background-color: rgb(0 0 0 / 90%);
-  color: var(--rose);
+  color: white;
   z-index: 2;
   border-radius: 7px;
   overflow: hidden;
@@ -18,7 +18,7 @@
 }
 
 .search-song {
-  background: var(--rose);
+  background: white;
   border: none;
   border-radius: 7px;
   height: 20px;
