--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,17 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
 }
 
 body {
@@ -19,15 +29,12 @@ body {
 #modals {
   width: 0;
   height: 0;
-  background-color: #41afa7;
 }
 
 /* Variables globales */
 :root {
   --green: #41afa7;
-  --orange: #f04d3c;
-  --yellow: #fccb64;
-  --purple: #9fa8eb;
-  --rose: #f6d4d2;
-  --rose-low-opacity: #f6d4d25d;
+  --orange: #ffa45f;
+  --yellow: #ffc85f;
+  --rose: #fb5d65;
 }
