--- a/src/pages/Profile/profile.css
+++ b/src/pages/Profile/profile.css
@@ -10,6 +10,7 @@
   border: 2px solid rgb(0 0 0 / 30%);
   border-radius: 10px;
   padding: 10px;
+  margin: 7px;
   text-align: center;
 }
 
@@ -19,8 +20,12 @@
 }
 
 .profile-posts {
-  width: 80%;
   height: 100%;
   overflow: auto;
-  padding: 5px 20px;
+  margin: 0 20px;
+  width: fit-content;
+}
+
+.profile-posts::-webkit-scrollbar {
+  display: none;
 }
