--- a/src/components/Explore/SongMinimal/songsminimal.css
+++ b/src/components/Explore/SongMinimal/songsminimal.css
@@ -1,6 +1,6 @@
 .song-minimal {
   width: 110px;
-  background-color: var(--yellow);
+  background-color: var(--green);
   margin: 7px 10px;
   padding: 7px;
   display: flex;
@@ -11,7 +11,7 @@
   overflow: hidden;
 }
 
-.song-minimal img {
+.song-minimal > img {
   border-radius: 7px;
   width: 80px;
   height: 80px;
@@ -26,28 +26,10 @@
 .song-minimal > div {
   width: 100%;
   display: flex;
-  justify-items: center;
 }
 
 .song-minimal > div > a {
   margin: 7px 7px 0;
   width: 35px;
   height: 35px;
-  background-color: black;
-  display: flex;
-  align-items: center;
-  border-radius: 50%;
-}
-
-.song-minimal a:first-child svg {
-  color: var(--orange);
-  width: 35px;
-  height: 30px;
-}
-
-.song-minimal a:last-child svg {
-  object-fit: contain;
-  color: var(--green);
-  width: 35px;
-  height: 24px;
 }
