--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,22 @@
 }
 
 .btn.secondary {
-  color: var(--orange);
+  color: black;
   background-color: var(--yellow);
+}
+
+.cover-window {
+  width: 0;
+  height: 0;
+  position: absolute;
+}
+
+.cover-window.active {
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
