--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -87,10 +87,13 @@
 .nav-bar button,
 .info-post button {
   display: flex;
+  width: 80%;
+  height: 40px;
   align-items: center;
   justify-content: center;
   margin: 20px auto;
   background-color: white;
+  font-size: 1em;
   color: var(--rose);
   font-weight: bold;
   border: none;
