--- a/src/components/Song/song.css
+++ b/src/components/Song/song.css
@@ -1,8 +1,9 @@
 .song-info {
-  margin-top: 5px;
+  margin: 5px auto 0;
   padding: 7px;
   background-color: var(--yellow);
   border-radius: 7px;
+  width: 450px;
   height: 80px;
   display: flex;
   justify-content: space-between;
