--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 .app-header {
   background-color: var(--green);
-  width: 20%;
+  width: 25%;
   display: flex;
   justify-content: flex-end;
 }
@@ -17,10 +17,14 @@
 }
 
 .explore-aside {
-  width: 30%;
+  width: 25%;
   background-color: white;
   padding: 5px 10px;
   overflow: auto;
+}
+
+.explore-aside > div {
+  width: 300px;
 }
 
 .explore-aside::-webkit-scrollbar {
@@ -48,6 +52,14 @@
 .btn.secondary {
   color: black;
   background-color: var(--yellow);
+}
+
+.close-window {
+  position: absolute;
+  top: 5px;
+  left: 10px;
+  padding: 5px;
+  cursor: pointer;
 }
 
 .cover-window {
