--- a/src/styles/forms.styles.css
+++ b/src/styles/forms.styles.css
@@ -18,6 +18,7 @@
   box-shadow: 1px 1px 10px 1px var(--green);
   position: relative;
   color: rgb(0 0 0 / 80%);
+  overflow: hidden;
 }
 
 .form h2 {
@@ -124,7 +125,21 @@
 
 .success {
   font-size: 0.8em;
-  color: green;
+  color: white;
+  width: 200px;
+  margin: 0 auto;
+  background-color: green;
+  border-radius: 5px;
+  padding: 5px;
+  position: absolute;
+  top: -40px;
+  left: 0;
+  right: 0;
+  transition: all 0.4s ease-in-out;
+}
+
+.success.active {
+  top: 20px;
 }
 
 .registro-link {
