--- a/src/styles/forms.styles.css
+++ b/src/styles/forms.styles.css
@@ -1,24 +1,22 @@
 .form-container {
-  background-color: white;
+  background-color: var(--secondary-button);
   width: 100%;
   height: 100vh;
   display: grid;
-  align-items: center;
-  justify-content: center;
+  place-content: center;
 }
 
 .form {
-  background-color: var(--green);
+  /* background: linear-gradient(300deg, var(--contrast-color), black); */
+  background: linear-gradient(160deg, var(--contrast-color), var(--background-dark-color));
   padding: 30px;
   border: none;
   border-radius: 10px;
   width: 400px;
   min-height: 350px;
   text-align: center;
-  box-shadow: 1px 1px 10px 1px var(--green);
   position: relative;
-  color: rgb(0 0 0 / 80%);
-  overflow: hidden;
+  color: white;
 }
 
 .form h2 {
@@ -66,6 +64,7 @@
   width: 100%;
   border: none;
   font-size: 0.9em;
+  color: white;
   border-bottom: 1px solid black;
   background-color: transparent;
   outline: none;
@@ -120,7 +119,8 @@
 
 .error {
   font-size: 0.8em;
-  color: #742020;
+  font-weight: 500;
+  color: var(--error-color);
 }
 
 .success {
@@ -128,7 +128,7 @@
   color: white;
   width: 200px;
   margin: 0 auto;
-  background-color: green;
+  background-color: var(--successful-color);
   border-radius: 5px;
   padding: 5px;
   position: absolute;
@@ -151,5 +151,6 @@
 
 .registro-link a {
   text-decoration: none;
-  color: #742020;
+  font-weight: 600;
+  color: var(--contrast-color);
 }
