--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,6 @@ body {
   --grey-color: #495062;
   --background-dark-color: #79c3ca;
   --background-light-color: #d7f5f5;
-  --error-color: #742020;
+  --error-color: #e7b29e;
   --successful-color: #2b9d6e;
 }
