--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 .app-header {
-  background-color: var(--background-dark-color);
+  background: linear-gradient(50deg, var(--grey-color), var(--contrast-color));
   width: 25%;
   display: flex;
   justify-content: flex-end;
@@ -34,22 +34,57 @@
 .btn {
   transition: all 0.3s;
   letter-spacing: 1px;
-  border: none;
   border-radius: 25px;
   font-size: 1em;
+  font-weight: 500;
   width: 150px;
+  height: 40px;
   margin: 7px 10px 0;
   padding: 7px;
   cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--background-light-color);
+}
+
+.btn span {
+  background-color: transparent;
+  position: absolute;
+  z-index: 1;
+}
+
+.btn::before {
+  content: "";
+  width: 0;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: all 1s ease-in-out;
+}
+
+.btn:hover::before {
+  width: 100%;
 }
 
 .btn.primary {
-  color: var(--background-light-color);
+  background-color: transparent;
+  border: 3px solid var(--primary-button);
+}
+
+.btn.primary::before {
   background-color: var(--primary-button);
 }
 
 .btn.secondary {
-  color: black;
+  background-color: transparent;
+  border: 3px solid var(--secondary-button);
+}
+
+.btn.secondary::before {
   background-color: var(--secondary-button);
 }
 
@@ -58,6 +93,7 @@
   top: 5px;
   left: 10px;
   padding: 5px;
+  font-size: 1.1rem;
   cursor: pointer;
 }
 
