--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -4,6 +4,7 @@
   position: relative;
   overflow: hidden;
   font-size: 1.1em;
+  color: white;
 }
 
 .menu,
@@ -13,14 +14,21 @@
 }
 
 .logo-app {
-  margin-top: 10px;
-  height: 90px;
+  width: 100%;
+  height: 80px;
   display: grid;
+  align-items: center;
 }
 
-.logo-app img {
-  margin: auto;
-  height: 90px;
+.logo-app a {
+  text-decoration: none;
+}
+
+.logo-app p {
+  font-size: 2em;
+  font-weight: bold;
+  color: white;
+  letter-spacing: 3px;
 }
 
 .nav-bar {
@@ -35,11 +43,10 @@
   font-size: 1.1em;
   text-align: center;
   text-decoration: none;
-  color: black;
+  color: white;
   transition: all 0.4s;
   height: 50px;
   width: 100%;
-  overflow: hidden;
   letter-spacing: 0.6px;
 }
 
@@ -52,11 +59,12 @@
 .nav-bar a:hover,
 .nav-bar a.active,
 .user-info:hover {
+  color: black;
   background-color: white;
 }
 
 .nav-bar a:hover {
-  transform: translateX(15px);
+  transform: translateX(20px);
 }
 
 .nav-bar a.active {
@@ -81,13 +89,7 @@
   margin-right: 7px;
 }
 
-.nav-bar img {
-  width: 19px;
-  margin: 0 5px;
-}
-
-.nav-bar button,
-.info-post button {
+.nav-bar button {
   display: flex;
   width: 80%;
   height: 40px;
@@ -96,7 +98,7 @@
   margin: 20px auto;
   background-color: white;
   font-size: 1em;
-  color: var(--rose);
+  color: var(--contrast-color);
   font-weight: bold;
   border: none;
   transition: all 0.1s;
@@ -131,7 +133,6 @@
   cursor: pointer;
   width: 1.2em;
   height: 1.2em;
-  color: black;
 }
 
 .user-tags {
@@ -141,29 +142,20 @@
   flex: 1;
 }
 
-.tag-name,
-.tag-nick {
-  margin: 1px 0;
-}
-
-.tag-name {
-  color: black;
-}
-
 .tag-nick {
   font-size: 0.9em;
-  color: rgb(0 0 0 / 80%);
 }
 
 .user-menu {
   width: 250px;
   height: 80px;
   overflow: hidden;
-  background-color: grey;
+  background-color: var(--secondary-button);
+  color: white;
   position: absolute;
-  bottom: -70px;
-  right: 0;
-  transition: all 0.3s ease-in-out;
+  bottom: 0;
+  right: -250px;
+  transition: all 0.3s ease-out;
   cursor: pointer;
   z-index: 2;
   border-top-left-radius: 10px;
@@ -171,7 +163,7 @@
 }
 
 .user-menu.active {
-  bottom: 0;
+  right: 0;
 }
 
 .user-menu-options {
@@ -182,7 +174,8 @@
 }
 
 .user-menu-options:hover {
-  background-color: white;
+  background-color: var(--background-light-color);
+  color: var(--contrast-color);
 }
 
 .user-menu-options svg {
