--- a/src/components/Modals/NewPost/newpost.css
+++ b/src/components/Modals/NewPost/newpost.css
@@ -1,49 +1,32 @@
-.new-post {
-  background-color: var(--green);
-  border-radius: 7px;
+.modal-container.slice {
   width: 500px;
-  min-height: 250px;
-  margin: 0 auto;
   position: absolute;
-  top: -250px;
+  top: -300px;
   left: 0;
   right: 0;
   transition: all 0.3s ease-in-out;
 }
 
-.new-post.visible {
+.modal-container .song-info {
+  margin: 5px auto 0;
+  background-color: var(--secondary-button);
+  font-size: 0.9rem;
+}
+
+.modal-container.slice.visible {
   top: 10px;
-}
-
-.info-post {
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  text-align: center;
-  color: black;
-  font-weight: bold;
-  font-size: 1em;
-  padding: 10px;
-}
-
-.info-post i {
-  position: absolute;
-  top: 7px;
-  left: 7px;
-  margin: 0;
-  padding: 0;
-  cursor: pointer;
 }
 
 .info-post textarea {
   border: none;
   background-color: transparent;
-  width: 90%;
+  padding: 5px 10px;
+  width: 85%;
   height: 80px;
   outline: none;
   border-bottom: 1px solid black;
   color: white;
-  font-size: 1em;
+  font-size: 1.1em;
 }
 
 .info-post textarea::placeholder {
@@ -51,7 +34,7 @@
 }
 
 .info-post .btn {
-  margin: 7px auto 0;
-  width: fit-content;
-  height: 30px;
+  color: white;
+  width: 120px;
+  margin: 10px auto;
 }
