--- a/src/styles/forms.styles.css
+++ b/src/styles/forms.styles.css
@@ -1,5 +1,5 @@
 .form-container {
-  background-color: var(--secondary-button);
+  background: linear-gradient(110deg, var(--contrast-color), var(--background-dark-color));
   width: 100%;
   height: 100vh;
   display: grid;
@@ -7,13 +7,11 @@
 }
 
 .form {
-  /* background: linear-gradient(300deg, var(--contrast-color), black); */
-  background: linear-gradient(160deg, var(--contrast-color), var(--background-dark-color));
+  background-color: var(--grey-color);
   padding: 30px;
   border: none;
   border-radius: 10px;
-  width: 400px;
-  min-height: 350px;
+  width: 500px;
   text-align: center;
   position: relative;
   color: white;
@@ -26,7 +24,7 @@
 }
 
 .form-inputs {
-  margin-top: 40px;
+  padding: 10px;
 }
 
 .input-container {
@@ -43,10 +41,9 @@
 
 .label-form {
   position: absolute;
-  font-size: 0.9em;
-  left: 7px;
-  top: 0;
-  bottom: 0;
+  font-size: 1em;
+  left: 10px;
+  top: 10px;
   transition: all 0.3s ease-out;
   pointer-events: none;
 }
@@ -60,12 +57,12 @@
 }
 
 .input-form {
-  height: 25px;
   width: 100%;
   border: none;
-  font-size: 0.9em;
+  padding: 10px 0;
+  font-size: 1em;
   color: white;
-  border-bottom: 1px solid black;
+  border-bottom: 2px solid white;
   background-color: transparent;
   outline: none;
 }
@@ -78,10 +75,10 @@
   display: flex;
   position: relative;
   flex-direction: column;
-  margin-left: 10px;
   width: 150px;
   height: 25px;
   text-align: center;
+  flex: 1;
 }
 
 .input-file::before {
@@ -97,18 +94,10 @@
 }
 
 .input-file-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   border-radius: 3px;
-  position: absolute;
-  margin: 0;
-  width: 100%;
+  margin: 0 auto;
+  width: 80%;
   height: 100%;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
   cursor: pointer;
 }
 
@@ -118,7 +107,7 @@
 }
 
 .error {
-  font-size: 0.8em;
+  font-size: 1em;
   font-weight: 500;
   color: var(--error-color);
 }
@@ -149,8 +138,13 @@
   bottom: 20px;
 }
 
+.form > .btn,
+.form-inputs > .btn {
+  margin: 30px auto;
+}
+
 .registro-link a {
   text-decoration: none;
   font-weight: 600;
-  color: var(--contrast-color);
+  color: var(--background-dark-color);
 }
