--- a/src/components/Explore/SongMinimal/songMinimal.css
+++ b/src/components/Explore/SongMinimal/songMinimal.css
@@ -1,35 +1,31 @@
 .song-minimal {
-  width: 110px;
-  background-color: var(--green);
-  margin: 7px 10px;
+  width: 100%;
+  background-color: var(--secondary-button);
   padding: 7px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
   border-radius: 7px;
-  overflow: hidden;
 }
 
 .song-minimal > img {
   border-radius: 7px;
-  width: 80px;
-  height: 80px;
+  width: 90%;
+  height: 90%;
   margin: auto;
 }
 
-.song-minimal p {
-  white-space: nowrap;
-  cursor: default;
-}
-
 .song-minimal > div {
+  margin-top: 10px;
   width: 100%;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+  align-items: center;
 }
 
 .song-minimal > div > a {
-  margin: 7px 7px 0;
-  width: 35px;
-  height: 35px;
+  width: 40px;
+  height: 40px;
 }
