--- a/src/components/Modals/NewPost/newpost.css
+++ b/src/components/Modals/NewPost/newpost.css
@@ -1,16 +1,17 @@
 .modal-container.slice {
   width: 500px;
   position: absolute;
-  top: -300px;
+  top: -305px;
   left: 0;
   right: 0;
   transition: all 0.3s ease-in-out;
+  overflow: visible;
 }
 
 .modal-container .song-info {
+  width: 300px;
   margin: 5px auto 0;
-  background-color: var(--secondary-button);
-  font-size: 0.9rem;
+  background: var(--secondary-button);
 }
 
 .modal-container.slice.visible {
@@ -26,7 +27,6 @@
   outline: none;
   border-bottom: 1px solid black;
   color: white;
-  font-size: 1.1em;
 }
 
 .info-post textarea::placeholder {
