--- a/src/components/Modals/index.css
+++ b/src/components/Modals/index.css
@@ -16,7 +16,6 @@
 .modal-container {
   color: white;
   font-weight: bold;
-  font-size: 0.9em;
   background-color: var(--grey-color);
   border-radius: 7px;
   min-width: 400px;
@@ -27,12 +26,14 @@
   margin: 0 auto;
   padding: 10px;
   position: relative;
+  overflow: hidden;
 }
 
 .modal-container .label-form {
   top: -15px;
 }
 
+.modal-container .input-form:not([value=""]) ~ .label-form,
 .modal-container .input-form:hover ~ .label-form,
 .modal-container .input-form:focus ~ .label-form {
   transform: translateY(0);
@@ -49,10 +50,6 @@
 
 .confirm-action {
   padding: 20px;
-}
-
-.confirm-action p {
-  font-size: 1rem;
 }
 
 .links-options {
