--- a/src/components/Posts/posts.css
+++ b/src/components/Posts/posts.css
@@ -1,8 +1,11 @@
 .post {
-  width: 500px;
+  width: 100%;
+  max-width: 550px;
   border-bottom: 3px solid var(--error-color);
   padding: 7px 10px;
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .post-user-menu {
@@ -16,8 +19,10 @@
 .toggle-menu {
   display: flex;
   position: absolute;
+  align-items: center;
   top: 0;
-  max-height: 0;
+  width: 100px;
+  height: 0;
   right: 0;
   transition: all 0.2s ease-out;
   overflow: hidden;
@@ -28,8 +33,8 @@
 }
 
 .toggle-menu.visible {
-  max-height: 40px;
-  background-color: rgb(0 0 0 / 90%);
+  height: 35px;
+  background-color: rgb(0 0 0 / 95%);
 }
 
 .toggle-menu svg {
@@ -44,7 +49,11 @@
 }
 
 .post-info {
-  display: flex;
+  width: 20%;
+  text-align: center;
+  padding: 10px 0;
+  border-radius: 7px;
+  color: black;
 }
 
 .post-info > * {
@@ -53,14 +62,43 @@
 
 .post-info img {
   aspect-ratio: 1/1;
-  width: 65px;
+  width: 70px;
   border-radius: 50%;
-}
-
-.post-info img:hover {
-  filter: contrast(105%);
+  border: 3px solid white;
 }
 
 .post-text {
   padding-top: 2px;
+  font-weight: 425;
+  width: 100%;
+  overflow-wrap: break-word;
+  padding-right: 20px;
+}
+
+.post-song {
+  width: 80%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-left: 15px;
+}
+
+.post-song-info {
+  margin-top: 10px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 16px;
+  align-items: center;
+  justify-items: center;
+}
+
+.post-song-info .song-info {
+  grid-column: 1 / 3;
+}
+
+.post-song-info a img {
+  width: 40px;
 }
