--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,10 @@
     sans-serif;
 }
 
-body {
+body,
+#root {
   height: 100vh;
   width: 100%;
-  font-size: 1em;
 }
 
 #modals {
@@ -32,6 +32,7 @@ body {
   --primary-button: #8990d8;
   --secondary-button: #7fb1cf;
   --contrast-color: #404376;
+  --complementary-color: #f7e7b9;
   --grey-color: #495062;
   --background-dark-color: #79c3ca;
   --background-light-color: #d7f5f5;
