--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,5 +1,4 @@
 .home-posts {
-  margin: 0 10px;
   overflow: auto;
   height: 100%;
   display: flex;
@@ -8,5 +7,14 @@
 }
 
 .home-posts::-webkit-scrollbar {
-  display: none;
+  appearance: none;
+}
+
+.home-posts::-webkit-scrollbar:vertical {
+  width: 6px;
+}
+
+.home-posts::-webkit-scrollbar-thumb {
+  background-color: var(--contrast-color);
+  border-radius: 7px;
 }
