--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 .app-body {
   height: 100%;
   background-color: var(--complementary-color);
-  padding: 10px;
+  padding: 10px 10px 0;
   display: flex;
 }
 
@@ -24,7 +24,7 @@
 }
 
 .explore-aside {
-  justify-content: center;
+  padding-left: 20px;
   align-items: flex-start;
   width: 40%;
   height: 100%;
