--- a/src/pages/Welcome/welcome.css
+++ b/src/pages/Welcome/welcome.css
@@ -7,7 +7,7 @@
 .background-welcome {
   width: 50%;
   height: 100%;
-  background: url("src/assets/img/back.jpg") no-repeat center;
+  background: url("@assets/img/back.jpg") no-repeat center;
   background-size: cover;
 }
 
